[package]
name = "bevy_game"                               # ToDo
version = "0.1.0"
publish = false
authors = ["SPC"]                                # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.8", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "render",
    "png",
    "x11",
] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12", features = ["2d", "stageless"] }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }
bevy_prototype_lyon = "0.6.0"
iyes_loopless = "0.7.1"
bevy-inspector-egui = "0.12.1"
bevy_interact_2d = { git = "https://github.com/Anshorei/bevy_rei", features = [
    "debug",
] }
bevy_tweening = { git = "https://github.com/SecretPocketCat/bevy_tweening", branch = "bevy_0_8" }

[build-dependencies]
embed-resource = "1.4"

[dev-dependencies]
pretty_assertions = "1.3.0"
spectral = "0.6.0"
test-case = "2.2.1"
